# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#
Version 1.3
Released:


#-----------------------------------------------------------------------------#

Version 1.2
Released: 

+Add configuration panel to plugin manager dialog
+Add outline sorting options to sort either alphabetically or by line number
+Fix bug in not refreshing tree when activated via toggle pane function in Editra.

#-----------------------------------------------------------------------------#

Version 1.1
Released: 06/05/2010

+Fix display of C function names that had * or & prefixed to them
+Major improvement to Tcl/Tk support. Supports SNIT syntax, packages, variables.
+Expanded support for CSS (still needs work though)

#-----------------------------------------------------------------------------#

Version 1.0
Released: 03/15/2010

+Add support for Java (patch from Eric Gaudet)
+Add support for Diff files (patch from Eric Gaudet)

#-----------------------------------------------------------------------------#

Version 0.9
Released: 06/14/2009

New:
+Synchronizes tree view with the current position in the document.
(patch from Igor Dejanovic)
+Add support for XText. (patch from Igor Dejanovic)

Bug Fixes:
+Fix incorrect string handling in php parser.

#-----------------------------------------------------------------------------#

Version 0.8
Released: 05/02/2009

New:
+Delay thread creation timing to reduce number of uneeded jobs that are started.

Bug Fixes:
+Fix activation issue causing some updates to be missed on Linux.

#-----------------------------------------------------------------------------#

Version 0.7
Released: 02/08/2009

New:
+Add support for XML/Html patch from Rudi Pettazzi
+Add support for Vala (Classes, Class Methods, Functions)
+Add support for VBScript (Functions, Subs)

Bug Fixes:
+Tree not being refreshed when browser window is first shown.
